fixed get link alignment

--- a/inbode.com/src/sites/all/themes/inbode/morestyles.css
+++ b/inbode.com/src/sites/all/themes/inbode/morestyles.css
@@ -124,7 +124,7 @@
 	
 #t7_swapout_header .t7_fav_share {
 	float: right;
-	margin: 4px 25px 0 0px;
+	margin: 7px 5px 0 0px;
 	text-align: center;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 13px;
